test/subjects/errors/bad_cast.php
<?php

	$x = (object
	) $y; // { Error: syntax error, unexpected VARIABLE }

?>
